[gd_scene load_steps=9 format=3 uid="uid://cfkwdtqyppcis"]

[ext_resource type="PackedScene" uid="uid://61bglmtffpp4" path="res://Player.tscn" id="1_bxut7"]
[ext_resource type="Script" path="res://Main.gd" id="1_hdegt"]
[ext_resource type="PackedScene" uid="uid://b0vcn11k24kty" path="res://Mob.tscn" id="2_4tw6w"]
[ext_resource type="PackedScene" uid="uid://dvl46sehv0l7t" path="res://Coin.tscn" id="3_no78v"]
[ext_resource type="PackedScene" uid="uid://cmscnxdh7gf8m" path="res://HUD.tscn" id="4_giapb"]
[ext_resource type="AudioStream" uid="uid://dax0da6bhke40" path="res://art/House In a Forest Loop.ogg" id="5_7jfq5"]
[ext_resource type="AudioStream" uid="uid://b0c6u0w0ub47v" path="res://art/gameover.wav" id="6_xjyp3"]

[sub_resource type="Curve2D" id="Curve2D_o7oah"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_hdegt")
mob_scene = ExtResource("2_4tw6w")
coin_scene = ExtResource("3_no78v")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.152941, 0.286275, 1)

[node name="Player" parent="." instance=ExtResource("1_bxut7")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_o7oah")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="HUD" parent="." instance=ExtResource("4_giapb")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7jfq5")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xjyp3")

[node name="CoinTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="CoinTimer" to="." method="_on_coin_timer_timeout"]
